Fix buttons on Firefox

--- a/src/editor/components/CopyToClipboard.css
+++ b/src/editor/components/CopyToClipboard.css
@@ -1,8 +1,10 @@
 /* stylelint-disable declaration-no-important */
 
 .CopyToClipboard {
-  width: 3em;
-  height: 3em;
+  width: calc(4.5vw - 0.5em);
+  height: calc(4.5vw - 0.5em);
+  margin-left: 0.25em;
+  margin-right: 0.25em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,10 +21,11 @@
   display: flex !important;
   flex-direction: column !important;
   justify-content: center !important;
-  align-items: center !important;
 }
 
 .copyIcon {
-  width: 2em;
-  height: 2em;
+  width: 80%;
+  height: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
